--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-bin
-include
-lib
-lib64
-share
-pyvenv.cfg
-cards.html
-.idea
-__pycache__
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
