--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-# Created by venv; see https://docs.python.org/3/library/venv.html
-*
+bin
+include
+lib
+lib64
+share
+pyvenv.cfg
+cards.html
+.idea
+__pycache__
